objects/Preferred_Vendor__c.object
<CustomObject>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <label>Billing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_Code__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE_Point_of_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Preferred_Vendor_Staff__c.Preferred_Vendor__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Preferred_Vendor_Staff__c</referenceTo>
        <relationshipLabel>Preferred Vendors</relationshipLabel>
        <relationshipName>Preferred_Vendors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly Rate</fullName>
                </value>
                <value>
                    <fullName>Flat Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State_Province__c</fullName>
        <label>Shipping State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip_Postal_Code__c</fullName>
        <label>Shipping Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Extraction__c</fullName>
        <description>Data Extraction (Data &amp; Evidence Tables)</description>
        <inlineHelpText>Data Extraction (Data &amp; Evidence Tables)</inlineHelpText>
        <label>Data Extraction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Primary</fullName>
                </value>
                <value>
                    <fullName>Yes - Secondary</fullName>
                </value>
                <value>
                    <fullName>Yes - Tertiary</fullName>
                </value>
                <value>
                    <fullName>Yes - Capable</fullName>
                </value>
                <value>
                    <fullName>Yes - Can Get Resources</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Econ_Modeling_Pub__c</fullName>
        <description>Health Economics Modeling / Publication</description>
        <inlineHelpText>Health Economics Modeling / Publication</inlineHelpText>
        <label>Health Econ Modeling / Pub</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Primary</fullName>
                </value>
                <value>
                    <fullName>Yes - Secondary</fullName>
                </value>
                <value>
                    <fullName>Yes - Tertiary</fullName>
                </value>
                <value>
                    <fullName>Yes - Capable</fullName>
                </value>
                <value>
                    <fullName>Yes - Can Get Resources</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Policy_Report_Pub__c</fullName>
        <description>Health Policy Report / Publication</description>
        <inlineHelpText>Health Policy Report / Publication</inlineHelpText>
        <label>Health Policy Report / Pub</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Primary</fullName>
                </value>
                <value>
                    <fullName>Yes - Secondary</fullName>
                </value>
                <value>
                    <fullName>Yes - Tertiary</fullName>
                </value>
                <value>
                    <fullName>Yes - Capable</fullName>
                </value>
                <value>
                    <fullName>Yes - Can Get Resources</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_Appraisal__c</fullName>
        <description>Quality Appraisal (e.g. RoB)</description>
        <inlineHelpText>Quality Appraisal (e.g. RoB)</inlineHelpText>
        <label>Quality Appraisal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Primary</fullName>
                </value>
                <value>
                    <fullName>Yes - Secondary</fullName>
                </value>
                <value>
                    <fullName>Yes - Tertiary</fullName>
                </value>
                <value>
                    <fullName>Yes - Capable</fullName>
                </value>
                <value>
                    <fullName>Yes - Can Get Resources</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statistics_Analysis__c</fullName>
        <description>Statistics / Analysis</description>
        <inlineHelpText>Statistics / Analysis</inlineHelpText>
        <label>Statistics / Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Primary</fullName>
                </value>
                <value>
                    <fullName>Yes - Secondary</fullName>
                </value>
                <value>
                    <fullName>Yes - Tertiary</fullName>
                </value>
                <value>
                    <fullName>Yes - Capable</fullName>
                </value>
                <value>
                    <fullName>Yes - Can Get Resources</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Report_Feas_Assmt_Pub__c</fullName>
        <description>Technical Report / Feasibility Assessment / Publication Medical-Clinical (Includes Biostats)</description>
        <inlineHelpText>Technical Report / Feasibility Assessment / Publication Medical-Clinical (Includes Biostats)</inlineHelpText>
        <label>Tech Report / Feas Assmt / Pub Med-Clin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Primary</fullName>
                </value>
                <value>
                    <fullName>Yes - Secondary</fullName>
                </value>
                <value>
                    <fullName>Yes - Tertiary</fullName>
                </value>
                <value>
                    <fullName>Yes - Capable</fullName>
                </value>
                <value>
                    <fullName>Yes - Can Get Resources</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Report_Pub_Diag_Prog__c</fullName>
        <description>Technical Report / Publication (Diagnostic / Prognostic)</description>
        <inlineHelpText>Technical Report / Publication (Diagnostic / Prognostic)</inlineHelpText>
        <label>Tech Report / Pub (Diag / Prog)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Primary</fullName>
                </value>
                <value>
                    <fullName>Yes - Secondary</fullName>
                </value>
                <value>
                    <fullName>Yes - Tertiary</fullName>
                </value>
                <value>
                    <fullName>Yes - Capable</fullName>
                </value>
                <value>
                    <fullName>Yes - Can Get Resources</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Report_Pub_Epi_Clinical__c</fullName>
        <description>Technical Report / Publication (Epi / Clinical)</description>
        <inlineHelpText>Technical Report / Publication (Epi / Clinical)</inlineHelpText>
        <label>Tech Report / Pub (Epi / Clinical)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Primary</fullName>
                </value>
                <value>
                    <fullName>Yes - Secondary</fullName>
                </value>
                <value>
                    <fullName>Yes - Tertiary</fullName>
                </value>
                <value>
                    <fullName>Yes - Capable</fullName>
                </value>
                <value>
                    <fullName>Yes - Can Get Resources</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Report_Pub_Health_Econ__c</fullName>
        <description>Technical Report / Publication (Health Economic)</description>
        <inlineHelpText>Technical Report / Publication (Health Economic)</inlineHelpText>
        <label>Tech Report / Pub (Health Econ)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Primary</fullName>
                </value>
                <value>
                    <fullName>Yes - Secondary</fullName>
                </value>
                <value>
                    <fullName>Yes - Tertiary</fullName>
                </value>
                <value>
                    <fullName>Yes - Capable</fullName>
                </value>
                <value>
                    <fullName>Yes - Can Get Resources</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Preferred Vendor</label>
    <nameField>
        <label>Preferred Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preferred Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DRE_Point_of_Contact__c</columns>
        <columns>Rate_Type__c</columns>
        <columns>Hourly_Rate__c</columns>
        <columns>Data_Extraction__c</columns>
        <columns>Quality_Appraisal__c</columns>
        <columns>Tech_Report_Pub_Epi_Clinical__c</columns>
        <columns>Tech_Report_Pub_Diag_Prog__c</columns>
        <columns>Tech_Report_Pub_Health_Econ__c</columns>
        <columns>Tech_Report_Feas_Assmt_Pub__c</columns>
        <columns>Health_Econ_Modeling_Pub__c</columns>
        <columns>Health_Policy_Report_Pub__c</columns>
        <columns>Statistics_Analysis__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Restrict_Flat_Rate_Type</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Rate_Type__c,"Flat Rate") &amp;&amp; !ISBLANK(Hourly_Rate__c)</errorConditionFormula>
        <errorDisplayField>Hourly_Rate__c</errorDisplayField>
        <errorMessage>Rate type for this vendor is flat rate. You cannot specify an hourly rate for this vendor.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Hourly_Rate_Type</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Rate_Type__c,"Hourly Rate") &amp;&amp; ISBLANK(Hourly_Rate__c)</errorConditionFormula>
        <errorDisplayField>Hourly_Rate__c</errorDisplayField>
        <errorMessage>Rate type for this vendor is hourly rate. You must specify and hourly rate.</errorMessage>
    </validationRules>
</CustomObject>